--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "license": "ISC",
   "devDependencies": {
     "@playwright/test": "^1.39.0",
-    "@types/node": "^20.8.7"
+    "@types/node": "^20.8.7",
+    "prettier": "3.0.3"
   }
 }
