--- a/package.json
+++ b/package.json
@@ -12,6 +12,12 @@
   "devDependencies": {
     "@playwright/test": "^1.39.0",
     "@types/node": "^20.8.7",
+    "@typescript-eslint/eslint-plugin": "^6.8.0",
+    "@typescript-eslint/parser": "^6.8.0",
+    "eslint": "^8.51.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-playwright": "^0.17.0",
+    "eslint-plugin-prettier": "^5.0.1",
     "prettier": "3.0.3"
   }
 }
