chore: playwright setup

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "format": "npx prettier --write .",
+    "format:check": "npx prettier . --check \"!**.ts\"",
     "lint": "npx eslint . --ext .ts --max-warnings=0",
     "test": "npx playwright test",
     "test:headed": "npm run test -- --headed",
