--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,6 +19,7 @@
   "rules": {
     "@typescript-eslint/explicit-function-return-type": "error",
     "no-console": "warn",
-    "prettier/prettier": "warn"
+    "prettier/prettier": "warn",
+    "playwright/no-nested-step": "off"
   }
 }
