chore: aliases for config file

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,8 @@
     "baseUrl": ".",
     "paths": {
       "@_src/*": ["src/*"],
-      "@_pw-config": ["playwright.config.ts"]
+      "@_pw-config": ["playwright.config.ts"],
+      "@_config/*": ["config/*"]
     }
   }
 }
